# vyasa-intelligence

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .windsurfrules  CHANGELOG.md  Dockerfile  Dockerfile.gradio  EXPLAINED.md  README.md  app.py  deploy-k8s.sh  docker-compose.yml  implementation-plan.md  main.py  project.md  pyproject.toml  run_pipeline.py  start.sh  test_generation.py  verify-m6.sh
.github/workflows/: ci-cd.yml  dependency-update.yml  release.yml  security.yml
data/cache/: response_cache.json
data/evaluation/: m4_completion_quality_gates.txt  m4_completion_results.json  m4_completion_summary.csv  m7_groq_test_results.json
data/raw/: adi_parva_sample.txt  bhishma_parva_sample.txt
k8s/: README.md  configmap.yaml  deployment.yaml  gradio-deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  redis-deployment.yaml  service.yaml
scripts/: deploy-k8s.sh  quality-gates.sh  smoke-test.sh
src/: __init__.py  pipeline.py
src/api/: __init__.py  main.py
src/evaluation/: __init__.py  evaluator.py  quality_gates.py  run_evaluation.py  run_groq_eval.py  test_groq.py
src/generation/: __init__.py  answer_generator.py  cache.py  guardrails.py  llm_factory.py  prompt_assembler.py
src/ingestion/: __init__.py  build_index.py  document_loader.py  entity_extractor.py  parva_splitter.py  secure_loader.py  validate.py
src/llm/: __init__.py  factory.py  local_llm.py
src/retrieval/: __init__.py  hybrid_search.py  pipeline.py  query_classifier.py  rank_fusion.py  reranker.py
tests/integration/: test_evaluation_pipeline.py  (+2 more)
(+3 files in other folders)
