[project]
name = "vyasa-intelligence"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-ai-contentsafety>=1.0.0",
    "boto3>=1.42.59",
    "chromadb>=1.5.2",
    "datasets>=4.6.1",
    "fastapi>=0.135.1",
    "gradio>=6.8.0",
    "httpx>=0.28.1",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-ollama>=1.0.1",
    "presidio-analyzer>=2.2.361",
    "presidio-anonymizer>=2.2.361",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "ragas>=0.4.3",
    "ragatouille>=0.0.9.post2",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.2.3",
    "tenacity>=9.1.4",
    "transformers>=5.2.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "black>=26.1.0",
    "isort>=8.0.1",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "ruff>=0.15.4",
]
